...
            FileDownloaderApp()
        }
    }
}

enum class Nav {
    FileDownloaderScreen,
    HistoryScreen
}

enum class ToastStatus {
    Initialization,
    NotDisplayed,
    SuccessNotification,
...
    var selectedDestination by remember { mutableIntStateOf(Nav.FileDownloaderScreen.ordinal) }
    Scaffold (
        modifier = Modifier.fillMaxSize().semantics { testTagsAsResourceId = true },
        bottomBar = {
            NavigationBar {
                NavigationBarItem(
                    icon = { Icon(Icons.Filled.Done, contentDescription = "ダウンロード") },
                    label = { Text(text = "ダウンロード") },
                    selected = selectedDestination == Nav.FileDownloaderScreen.ordinal,
                    onClick = {
                        navController.navigate(Nav.FileDownloaderScreen.name)
                        selectedDestination = Nav.FileDownloaderScreen.ordinal
                    }
                )
                NavigationBarItem(
                    icon = { Icon(Icons.AutoMirrored.Filled.List, contentDescription = "履歴") },
                    label = { Text(text = "履歴") },
                    selected = selectedDestination == Nav.HistoryScreen.ordinal,
                    onClick = {
                        navController.navigate(Nav.HistoryScreen.name)
                        selectedDestination = Nav.HistoryScreen.ordinal
                    }
...
            shape = MaterialTheme.shapes.small
        ) {
            Text(text = "GALLERYから選択")
        }
        Text(text = "URLを入力してください", modifier = Modifier.padding(10.dp))
        Row{
            TextField(
                modifier = Modifier
                    .padding(10.dp)
                    .weight(1f)
                    .testTag("TextField"),
                value = url,
                onValueChange = { url = it },
...
                    )
                    downloadClick.value = true
                    toastIsDisplayed.intValue = ToastStatus.NotDisplayed.ordinal
                },
                shape = MaterialTheme.shapes.small
            ) {
                Text(text = "ダウンロード開始")
            }
        }
        Box(modifier = Modifier
            .weight(10f)
            .fillMaxWidth()){
            // 画像表示判定
            if(imageBitmap != null){
                Image(
                    modifier = Modifier.fillMaxSize(),
                    contentScale = ContentScale.Fit,
                    bitmap = imageBitmap!!,
                    contentDescription = "Internal Storage Image"
                )
            }

            // toast,downloadの終了判定
            if (toastIsDisplayed.intValue == ToastStatus.NotDisplayed.ordinal || downloadClick.value){
                // ダウンロードボタンクリック時処理
...
                        downloadClick.value = false
                    }
                }else{
                    // プログレスバー表示
                    CircularProgressIndicator(
                        modifier = Modifier
                            .testTag("ProgressBar")
                            .align(Alignment.Center)
                            .width(64.dp),
                        color = MaterialTheme.colorScheme.secondary,
                        trackColor = MaterialTheme.colorScheme.surfaceVariant,
                    )
                }
...
